--- a/index.html
+++ b/index.html
@@ -19,23 +19,44 @@
     </section>
 
     <section class="main-content">
-      <pre><code>    We provide the basic functionality your program will need to get off the ground
+      <pre><code>   ### We provide the basic functionality your program will need to get off the ground
 </code></pre>
 
-<h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p><img src="https://github.com/unicorn.png" alt="My Unicorn">.</p>
+<p><img src="http://imgur.com/VaFb0e3" alt="rack">.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="user-focused" class="anchor" href="#user-focused" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>User Focused</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<ul>
+<li>Map of docking stations</li>
+<li>Bike availability</li>
+<li>Rewards balance</li>
+</ul>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="security" class="anchor" href="#security" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Security</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ul>
+<li>Electronic lock</li>
+<li>Instant reports on docking stations</li>
+</ul>
+
+<h3>
+<a id="bike-database" class="anchor" href="#bike-database" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bike Database</h3>
+
+<ul>
+<li>Tracks maintenance, and issues</li>
+<li>Inventory</li>
+</ul>
+
+<h3>
+<a id="payment-system" class="anchor" href="#payment-system" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Payment System</h3>
+
+<ul>
+<li>Modern card carriers</li>
+<li>Paypal</li>
+<li>Square readers</li>
+</ul>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
